# CLE

./: .gitignore
CLE1_T2G5/prog1/: CMakeLists.txt  assign1_functions.c  assign1_functions.h  assign1_worker.c  assign1_worker.h  fifo.c  fifo.h  func.c  func.h  main.c  preprocessing.c  preprocessing.h  prob1_processing.c  prob1_processing.h  probConst.h  prog1  readme.md  shared_region.c  shared_region.h  structures.h  text2.txt  text3.txt  text4.txt  valgrind.xml  worker.c  worker.h
CLE1_T2G5/prog2/: CMakeLists.txt  fifo.c  fifo.h  main.c  probConst.h  problem2Operations.c  problem2Operations.h  prog2  readme.md  sharedRegion.c  sharedRegion.h  structures.c  structures.h
CLE2_T2G5/: present.pptx
CLE2_T2G5/basic1/: README.md  hello  hello.c  sendRecData  sendRecData.c  sendRecData1  sendRecData1.c  sendRecData2  sendRecData2.c
CLE2_T2G5/basic2/: broadcast.c  gather1.c  gather2.c  problem1  problem1.c  problem2.c  reduce  reduce.c  scatter1.c  scatter2.c
CLE2_T2G5/prog1/: CMakeLists.txt  main.c  prob1  prob1_funcs.c  prob1_processing.c  prob1_processing.h  prob1_processing.h.gch  probConst.h  sharedRegion.c  sharedRegion.h  structures.h  structures.h.gch  utils.c  utils.h  utils.h.gch
CLE2_T2G5/prog2/: main.c  main2.c  mainV3.c  probConst.h  script.sh  sharedRegion.c  sharedRegion.h  stats.py  structures.h  utils.c  utils.h
CLE3_T2G5/: Makefile  main  new_version  new_version.cu  other_version  other_version.cu  other_version_cpu.c  probConst.h  sharedRegion.c  structures.h  utils.c
CLE3_T2G5/CodeSamples/chapter02/: checkDeviceInfor.cu
CLE3_T2G5/prog1/: Makefile  mainRows  mainRows.cu
CLE3_T2G5/prog2/: Makefile  mainColumns  mainColumns.cu
problems-single-thread/: README.md
problems-single-thread/prob1/: CMakeLists.txt  makefile  preprocessing.c  preprocessing.h  problem1.c  problem1_functions.c  problem1_functions.h  test.c  test0.txt  text0.txt
problems-single-thread/problem1/: CMakeLists.txt  README.md  countWords  preprocessing.c  preprocessing.h  prob1_processing.c  prob1_processing.h  problem1.c  problem1_functions.c  test.c  test0.txt  text0.txt
problems-single-thread/problem2/: CMakeLists.txt  main.c  matrixOperations.c  matrixOperations.h  problem2Operations.c  problem2Operations.h
